{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 182,
  "lineage": "1d5b7a76-a072-e9a2-f4b0-ad41c5bf6498",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:network-acl/acl-2372c92e",
            "default_network_acl_id": "acl-2372c92e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-2372c92e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000000000000",
            "subnet_ids": [
              "subnet-0ba595e2",
              "subnet-13508b62",
              "subnet-19ce8a14",
              "subnet-41bbece7",
              "subnet-49defac6",
              "subnet-4fdabc9b",
              "subnet-a4ff6030",
              "subnet-a7026410",
              "subnet-e4293e7e",
              "subnet-f2d576de",
              "subnet-f97fbf79",
              "subnet-fd676806"
            ],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-default"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-default"
            },
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-09c0a09e",
            "default_route_table_id": "rtb-09c0a09e",
            "id": "rtb-09c0a09e",
            "owner_id": "000000000000",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-default"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:security-group/sg-bdb603a0dba8c6a5f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-bdb603a0dba8c6a5f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-default"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-default"
            },
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-10968562",
            "domain": "vpc",
            "id": "eipalloc-10968562",
            "public_dns": "ec2-127-137-7-222.us-west-2.compute.amazonaws.com",
            "public_ip": "127.137.7.222",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b54e4902",
            "domain": "vpc",
            "id": "eipalloc-b54e4902",
            "public_dns": "ec2-127-184-167-236.us-west-2.compute.amazonaws.com",
            "public_ip": "127.184.167.236",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-31df4676",
            "domain": "vpc",
            "id": "eipalloc-31df4676",
            "public_dns": "ec2-127-67-177-219.us-west-2.compute.amazonaws.com",
            "public_ip": "127.67.177.219",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-8ba9b287",
            "domain": "vpc",
            "id": "eipalloc-8ba9b287",
            "public_dns": "ec2-127-70-29-90.us-west-2.compute.amazonaws.com",
            "public_ip": "127.70.29.90",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2d"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2d"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:internet-gateway/igw-fa9d5859",
            "id": "igw-fa9d5859",
            "owner_id": "000000000000",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-10968562",
            "connectivity_type": "public",
            "id": "nat-69bcccd52ca436dcb",
            "network_interface_id": "eni-f1e47a28",
            "private_ip": "10.248.176.51",
            "public_ip": "127.137.7.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-13508b62",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b54e4902",
            "connectivity_type": "public",
            "id": "nat-8d7609de71d219569",
            "network_interface_id": "eni-45518892",
            "private_ip": "10.27.72.200",
            "public_ip": "127.184.167.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-4fdabc9b",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-31df4676",
            "connectivity_type": "public",
            "id": "nat-8b28296e93fab69cd",
            "network_interface_id": "eni-00557425",
            "private_ip": "10.147.54.252",
            "public_ip": "127.67.177.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-e4293e7e",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-8ba9b287",
            "connectivity_type": "public",
            "id": "nat-87d7fcd6056e424c2",
            "network_interface_id": "eni-e1754c23",
            "private_ip": "10.238.191.228",
            "public_ip": "127.70.29.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-a4ff6030",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2d"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-us-west-2d"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-1b5433c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-69bcccd52ca436dcb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-1b5433c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-16c22efb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-8d7609de71d219569",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-16c22efb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-1d7de4be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-8b28296e93fab69cd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-1d7de4be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-d59028c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-87d7fcd6056e424c2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-d59028c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-fa9d5859",
            "id": "r-rtb-98c3b78b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-98c3b78b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-3ccb5da0",
            "id": "rtb-3ccb5da0",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-1b5433c5",
            "id": "rtb-1b5433c5",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-16c22efb",
            "id": "rtb-16c22efb",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-1d7de4be",
            "id": "rtb-1d7de4be",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-d59028c8",
            "id": "rtb-d59028c8",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2d"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2d"
            },
            "timeouts": null,
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:route-table/rtb-98c3b78b",
            "id": "rtb-98c3b78b",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-b363de13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-c8285ff7",
            "route_table_id": "rtb-3ccb5da0",
            "subnet_id": "subnet-a7026410"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-d10cb111",
            "route_table_id": "rtb-3ccb5da0",
            "subnet_id": "subnet-49defac6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-17acc87d",
            "route_table_id": "rtb-3ccb5da0",
            "subnet_id": "subnet-f2d576de"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-cecb08db",
            "route_table_id": "rtb-3ccb5da0",
            "subnet_id": "subnet-41bbece7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-e00fdb8a",
            "route_table_id": "rtb-1b5433c5",
            "subnet_id": "subnet-f97fbf79"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-3d7f8942",
            "route_table_id": "rtb-16c22efb",
            "subnet_id": "subnet-0ba595e2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-8acefd29",
            "route_table_id": "rtb-1d7de4be",
            "subnet_id": "subnet-fd676806"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-96d4b955",
            "route_table_id": "rtb-d59028c8",
            "subnet_id": "subnet-19ce8a14"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-2d3fdafb",
            "route_table_id": "rtb-98c3b78b",
            "subnet_id": "subnet-13508b62"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-2dfb972a",
            "route_table_id": "rtb-98c3b78b",
            "subnet_id": "subnet-4fdabc9b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-38cd2100",
            "route_table_id": "rtb-98c3b78b",
            "subnet_id": "subnet-e4293e7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-c4543511",
            "route_table_id": "rtb-98c3b78b",
            "subnet_id": "subnet-a4ff6030"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-a7026410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-a7026410",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2a"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-49defac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-49defac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2b"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-f2d576de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.24.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-f2d576de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2c"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-41bbece7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.28.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-41bbece7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2d"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-intra-us-west-2d"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-f97fbf79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-f97fbf79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-0ba595e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba595e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-fd676806",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-fd676806",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2c"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-19ce8a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-19ce8a14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2d"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-us-west-2d"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-13508b62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-13508b62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-4fdabc9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-4fdabc9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-e4293e7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-e4293e7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2c"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:subnet/subnet-a4ff6030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-a4ff6030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2d"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public-us-west-2d"
            },
            "vpc_id": "vpc-b363de13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:vpc/vpc-b363de13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-2372c92e",
            "default_route_table_id": "rtb-09c0a09e",
            "default_security_group_id": "sg-bdb603a0dba8c6a5f",
            "dhcp_options_id": "dopt-7a8b9c2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b363de13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c0a09e",
            "owner_id": "000000000000",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            }
          }
        }
      ]
    }
  ]
}